# aipaca

./: LICENSE  README.md  pyproject.toml
aipaca/: __init__.py  mcp_server.py
aipaca/schemas/: __init__.py  alpcouplings_schema.py
src/aipaca/: mcp_server.py
src/aipaca/schemas/: alpcouplings_schema.py
